Some level editor experimentation. More work needed.